--- a/LayoutsViewsExample/Views/Products/Index.cshtml
+++ b/LayoutsViewsExample/Views/Products/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-	Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewData["Title"] = "Products";
+	Layout = "~/Views/Shared/_ProductsLayout.cshtml";
 }
 
 <h1>Products</h1>
