--- a/LayoutsViewsExample/Views/Products/Order.cshtml
+++ b/LayoutsViewsExample/Views/Products/Order.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-	Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewData["Title"] = "Order Product";
+	Layout = "~/Views/Shared/_ProductsLayout.cshtml";
 }
 
 <h1>Order Product</h1>
