--- a/LayoutsViewsExample/Views/Products/Search.cshtml
+++ b/LayoutsViewsExample/Views/Products/Search.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-	Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewData["Title"] = "Search Products";
+	Layout = "~/Views/Shared/_ProductsLayout.cshtml";
 }
 
 <h1>Search Products</h1>
