--- a/LayoutsViewsExample/Views/Shared/_Layout.cshtml
+++ b/LayoutsViewsExample/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width" />
-	<title>Asp.Net Core Demo App</title>
+	<title>@ViewData["Title"]</title>
 	<link href="~/StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
