--- a/LayoutsViewsExample/Views/Products/Search.cshtml
+++ b/LayoutsViewsExample/Views/Products/Search.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
 	ViewData["Title"] = "Search Products";
-	Layout = "~/Views/Shared/_ProductsLayout.cshtml";
+	if (ViewBag.ProductID != null)
+	{
+		Layout = "~/Views/Shared/_ProductsLayout.cshtml";
+	}
 }
 
 <h1>Search Products</h1>
