Layout Views Sections

--- a/LayoutsViewsExample/Views/Shared/_Layout.cshtml
+++ b/LayoutsViewsExample/Views/Shared/_Layout.cshtml
@@ -23,7 +23,12 @@
 		<div class="page-content">
 			@RenderBody()
 		</div>
+
+		<div class="footer-content">
+			@RenderSection("footer_section", false)
+		</div>
 	</div>
 
+	<script src="file.js"></script>
 </body>
 </html>
